LiteAnnouncer 更新至 v1.3.0: https://www.spigotmc.org/resources/84664/update?update=464087

--- a/src/main/resources/Languages/Simplified-Chinese/Bukkit/Config.yml
+++ b/src/main/resources/Languages/Simplified-Chinese/Bukkit/Config.yml
@@ -42,3 +42,9 @@ Permissions:
         List: 
             Permission: liteannouncer.command.list
             Default: false
+        Switch:
+            Permission: liteannouncer.command.switch
+            Default: false
+        Ignore:
+            Permission: liteannouncer.command.ignore
+            Default: false
