--- a/src/main/resources/Languages/English/Bungee/Config.yml
+++ b/src/main/resources/Languages/English/Bungee/Config.yml
@@ -41,3 +41,9 @@ Permissions:
         List: 
             Permission: liteannouncer.command.list
             Default: false
+        Switch:
+            Permission: liteannouncer.command.switch
+            Default: false
+        Ignore:
+            Permission: liteannouncer.command.ignore
+            Default: false
