--- a/src/main/resources/Languages/Traditional-Chinese/Bukkit/Config.yml
+++ b/src/main/resources/Languages/Traditional-Chinese/Bukkit/Config.yml
@@ -42,3 +42,9 @@ Permissions:
         List: 
             Permission: liteannouncer.command.list
             Default: false
+        Switch:
+            Permission: liteannouncer.command.switch
+            Default: false
+        Ignore:
+            Permission: liteannouncer.command.ignore
+            Default: false
