--- a/src/main/resources/Languages/English.properties
+++ b/src/main/resources/Languages/English.properties
@@ -4,6 +4,7 @@ PlaceholderAPINotFound: {prefix}&cThe &ePlaceholderAPI&c could not be found and 
 FindThePlaceholderAPI: {prefix}&aFind the &ePlaceholderAPI&a and get ready
 PluginEnabledSuccessfully: {prefix}&aPlugin are enabled!
 
+LoadingJSONComponentFailed: {prefix}&cUnable to load JSON component, reason: &6{exception}
 ConfigurationLoadingError: [LiteAnnouncer] &cUnable to load &e{file}&c, Restoring default configuration files...
 ConfigurationRepair: {prefix}&aThe default profile has been restored.
 LoadingAnnouncements: {prefix}&c{announcements} &aserver announcements loaded.
