--- a/src/main/resources/Languages/Simplified-Chinese/Bungee/Announcements.yml
+++ b/src/main/resources/Languages/Simplified-Chinese/Bungee/Announcements.yml
@@ -65,32 +65,32 @@ Announcements:
             Enabled: false
             #任务顺序
             Task-Sequence:
-            #本文消息列表（格式： [消息]:[延迟]）
-            - '&a&l这是动作栏消息的示范本文': 0.2
-            - '&e&l这&a&l是动作栏消息的示范本文': 0.2
-            - '&a&l这&e&l是&a&l动作栏消息的示范本文': 0.2
-            - '&a&l这是&e&l动&a&l作栏消息的示范本文': 0.2
-            - '&a&l这是动&e&l作&a&l栏消息的示范本文': 0.2
-            - '&a&l这是动作&e&l栏&a&l消息的示范本文': 0.2
-            - '&a&l这是动作栏&e&l消&a&l息的示范本文': 0.2
-            - '&a&l这是动作栏消&e&l息&a&l的示范本文': 0.2
-            - '&a&l这是动作栏消息&e&l的&a&l示范本文': 0.2
-            - '&a&l这是动作栏消息的&e&l示&a&l范本文': 0.2
-            - '&a&l这是动作栏消息的示&e&l范&a&l本文': 0.2
-            - '&a&l这是动作栏消息的示范&e&l本&a&l文': 0.2
-            - '&a&l这是动作栏消息的示范本&e&l文': 0.2
-            - '&a&l这是动作栏消息的示范本文': 0.2
-            - '&a&l这是动作栏消息的示范本&e&l文': 0.2
-            - '&a&l这是动作栏消息的示范&e&l本&a&l文': 0.2
-            - '&a&l这是动作栏消息的示&e&l范&a&l本文': 0.2
-            - '&a&l这是动作栏消息的&e&l示&a&l范本文': 0.2
-            - '&a&l这是动作栏消息&e&l的&a&l示范本文': 0.2
-            - '&a&l这是动作栏消&e&l息&a&l的示范本文': 0.2
-            - '&a&l这是动作栏&e&l消&a&l息的示范本文': 0.2
-            - '&a&l这是动作&e&l栏&a&l消息的示范本文': 0.2
-            - '&a&l这是动&e&l作&a&l栏消息的示范本文': 0.2
-            - '&a&l这是&e&l动&a&l作栏消息的示范本文': 0.2
-            - '&a&l这&e&l是&a&l动作栏消息的示范本文': 0.2
-            - '&e&l这&a&l是动作栏消息的示范本文': 0.2
-            - '&a&l这是动作栏消息的示范本文': 0.2
+            #文本消息列表（格式： [消息]:[延迟]）
+            - '&a&l这是动作栏消息的示范文本': 0.2
+            - '&e&l这&a&l是动作栏消息的示范文本': 0.2
+            - '&a&l这&e&l是&a&l动作栏消息的示范文本': 0.2
+            - '&a&l这是&e&l动&a&l作栏消息的示范文本': 0.2
+            - '&a&l这是动&e&l作&a&l栏消息的示范文本': 0.2
+            - '&a&l这是动作&e&l栏&a&l消息的示范文本': 0.2
+            - '&a&l这是动作栏&e&l消&a&l息的示范文本': 0.2
+            - '&a&l这是动作栏消&e&l息&a&l的示范文本': 0.2
+            - '&a&l这是动作栏消息&e&l的&a&l示范文本': 0.2
+            - '&a&l这是动作栏消息的&e&l示&a&l范文本': 0.2
+            - '&a&l这是动作栏消息的示&e&l范&a&l文本': 0.2
+            - '&a&l这是动作栏消息的示范&e&l文&a&l本': 0.2
+            - '&a&l这是动作栏消息的示范文&e&l本': 0.2
+            - '&a&l这是动作栏消息的示范文本': 0.2
+            - '&a&l这是动作栏消息的示范文&e&l本': 0.2
+            - '&a&l这是动作栏消息的示范&e&l文&a&l本': 0.2
+            - '&a&l这是动作栏消息的示&e&l范&a&l文本': 0.2
+            - '&a&l这是动作栏消息的&e&l示&a&l范文本': 0.2
+            - '&a&l这是动作栏消息&e&l的&a&l示范文本': 0.2
+            - '&a&l这是动作栏消&e&l息&a&l的示范文本': 0.2
+            - '&a&l这是动作栏&e&l消&a&l息的示范文本': 0.2
+            - '&a&l这是动作&e&l栏&a&l消息的示范文本': 0.2
+            - '&a&l这是动&e&l作&a&l栏消息的示范文本': 0.2
+            - '&a&l这是&e&l动&a&l作栏消息的示范文本': 0.2
+            - '&a&l这&e&l是&a&l动作栏消息的示范文本': 0.2
+            - '&e&l这&a&l是动作栏消息的示范文本': 0.2
+            - '&a&l这是动作栏消息的示范文本': 0.2
             - '&r': 0.2
