--- a/src/main/resources/Languages/Traditional-Chinese/Bukkit/Announcements.yml
+++ b/src/main/resources/Languages/Traditional-Chinese/Bukkit/Announcements.yml
@@ -58,32 +58,32 @@ Announcements:
             Enabled: false
             #任務順序
             Task-Sequence:
-            #本文消息列表（格式： [消息]:[延遲]）
-            - '&a&l這是動作欄消息的示範本文': 0.2
-            - '&e&l這&a&l是動作欄消息的示範本文': 0.2
-            - '&a&l這&e&l是&a&l動作欄消息的示範本文': 0.2
-            - '&a&l這是&e&l動&a&l作欄消息的示範本文': 0.2
-            - '&a&l這是動&e&l作&a&l欄消息的示範本文': 0.2
-            - '&a&l這是動作&e&l欄&a&l消息的示範本文': 0.2
-            - '&a&l這是動作欄&e&l消&a&l息的示範本文': 0.2
-            - '&a&l這是動作欄消&e&l息&a&l的示範本文': 0.2
-            - '&a&l這是動作欄消息&e&l的&a&l示範本文': 0.2
-            - '&a&l這是動作欄消息的&e&l示&a&l範本文': 0.2
-            - '&a&l這是動作欄消息的示&e&l範&a&l本文': 0.2
-            - '&a&l這是動作欄消息的示範&e&l本&a&l文': 0.2
-            - '&a&l這是動作欄消息的示範本&e&l文': 0.2
-            - '&a&l這是動作欄消息的示範本文': 0.2
-            - '&a&l這是動作欄消息的示範本&e&l文': 0.2
-            - '&a&l這是動作欄消息的示範&e&l本&a&l文': 0.2
-            - '&a&l這是動作欄消息的示&e&l範&a&l本文': 0.2
-            - '&a&l這是動作欄消息的&e&l示&a&l範本文': 0.2
-            - '&a&l這是動作欄消息&e&l的&a&l示範本文': 0.2
-            - '&a&l這是動作欄消&e&l息&a&l的示範本文': 0.2
-            - '&a&l這是動作欄&e&l消&a&l息的示範本文': 0.2
-            - '&a&l這是動作&e&l欄&a&l消息的示範本文': 0.2
-            - '&a&l這是動&e&l作&a&l欄消息的示範本文': 0.2
-            - '&a&l這是&e&l動&a&l作欄消息的示範本文': 0.2
-            - '&a&l這&e&l是&a&l動作欄消息的示範本文': 0.2
-            - '&e&l這&a&l是動作欄消息的示範本文': 0.2
-            - '&a&l這是動作欄消息的示範本文': 0.2
+            #文本消息列表（格式： [消息]:[延遲]）
+            - '&a&l這是動作欄消息的示範文本': 0.2
+            - '&e&l這&a&l是動作欄消息的示範文本': 0.2
+            - '&a&l這&e&l是&a&l動作欄消息的示範文本': 0.2
+            - '&a&l這是&e&l動&a&l作欄消息的示範文本': 0.2
+            - '&a&l這是動&e&l作&a&l欄消息的示範文本': 0.2
+            - '&a&l這是動作&e&l欄&a&l消息的示範文本': 0.2
+            - '&a&l這是動作欄&e&l消&a&l息的示範文本': 0.2
+            - '&a&l這是動作欄消&e&l息&a&l的示範文本': 0.2
+            - '&a&l這是動作欄消息&e&l的&a&l示範文本': 0.2
+            - '&a&l這是動作欄消息的&e&l示&a&l範文本': 0.2
+            - '&a&l這是動作欄消息的示&e&l範&a&l文本': 0.2
+            - '&a&l這是動作欄消息的示範&e&l文&a&l本': 0.2
+            - '&a&l這是動作欄消息的示範文&e&l本': 0.2
+            - '&a&l這是動作欄消息的示範文本': 0.2
+            - '&a&l這是動作欄消息的示範文&e&l本': 0.2
+            - '&a&l這是動作欄消息的示範&e&l文&a&l本': 0.2
+            - '&a&l這是動作欄消息的示&e&l範&a&l文本': 0.2
+            - '&a&l這是動作欄消息的&e&l示&a&l範文本': 0.2
+            - '&a&l這是動作欄消息&e&l的&a&l示範文本': 0.2
+            - '&a&l這是動作欄消&e&l息&a&l的示範文本': 0.2
+            - '&a&l這是動作欄&e&l消&a&l息的示範文本': 0.2
+            - '&a&l這是動作&e&l欄&a&l消息的示範文本': 0.2
+            - '&a&l這是動&e&l作&a&l欄消息的示範文本': 0.2
+            - '&a&l這是&e&l動&a&l作欄消息的示範文本': 0.2
+            - '&a&l這&e&l是&a&l動作欄消息的示範文本': 0.2
+            - '&e&l這&a&l是動作欄消息的示範文本': 0.2
+            - '&a&l這是動作欄消息的示範文本': 0.2
             - '&r': 0.2
