--- a/src/main/resources/Languages/Traditional-Chinese.properties
+++ b/src/main/resources/Languages/Traditional-Chinese.properties
@@ -4,6 +4,7 @@ PlaceholderAPINotFound: {prefix}&c\u627e\u4e0d\u5230 &ePlaceholderAPI &c\uff0c \
 FindThePlaceholderAPI: {prefix}&a\u627e\u5230 &ePlaceholderAPI &a\uff0c \u6e96\u5099\u5c31\u7dd2\u3002
 PluginEnabledSuccessfully: {prefix}&a\u63d2\u4ef6\u52a0\u8f09\u5b8c\u6210\u3002
 
+LoadingJSONComponentFailed: {prefix}&c\u7121\u6cd5\u52a0\u8f09JSON\u4fe1\u606f\u5143\u4ef6\uff0c\u539f\u56e0: &6{exception}
 ConfigurationLoadingError: [LiteAnnouncer] &c\u7121\u6cd5\u52a0\u8f09\u914d\u7f6e\u6587\u4ef6 &e{file}&c\uff0c \u6b63\u5728\u5617\u8a66\u6062\u5fa9\u9ed8\u8a8d\u914d\u7f6e\u6587\u4ef6...
 ConfigurationRepair: {prefix}&a\u5df2\u6062\u5fa9\u9ed8\u8a8d\u914d\u7f6e\u6587\u4ef6\u3002
 LoadingAnnouncements: {prefix}&a\u5df2\u52a0\u8f09 &c{announcements} &a\u500b\u4f3a\u670d\u5668\u516c\u544a\u3002
